@@ -1,3 +1,4 @@
+- 2023-09-15: Revert to AirConnect 3 to restore ARMv6 support
 - 2023-05-08: Update to AirConnect v1.1.5
 - 2023-03-31: Update to AirConnect v1.0.16
               Switch default encoding from FLAC to WAV to circumvent Sonos 15.2 changes
